--- a/emailer2/index.html
+++ b/emailer2/index.html
@@ -94,7 +94,6 @@
                           <p style="display: none !important; font-size: 0 !important;height: 0;width: 0;">Monthly photoshoot starting 1000AED a day</p>
                         </td>
                       </tr>
-                      
                       <tr style="
                             border-collapse: collapse;
                             line-height: 0;
@@ -116,7 +115,42 @@
                                 color: #5c68e2;
                                 font-size: 14px;
                               ">
-                            <img title="Dubai food shoot" src="https://mccollinsmediaweb.github.io/dfsemailers/emailer2/Images/gif.gif"
+                            <img title="Dubai food shoot" src="https://mccollinsmediaweb.github.io/dfsemailers/emailer2/Images/11.jpg"
+                              alt="Dubai food shoot" width="650" style="
+                                  display: block;
+                                  border: 0;
+                                  outline: none;
+                                  text-decoration: none;
+                                  float: left;
+                                  line-height: 0;
+                                  font-size: 0;
+                                  border: 0;
+                                " />
+                          </a>
+                        </td>
+                      </tr>
+                      <tr style="
+                            border-collapse: collapse;
+                            line-height: 0;
+                            font-size: 0;
+                            border: 0;
+                          ">
+                        <td style="
+                              padding: 0;
+                              margin: 0;
+                              line-height: 0;
+                              font-size: 0;
+                              border: 0;
+                            " border="0" valign="top" bgcolor="#ffffff">
+                          <a title="Dubai food shoot" href="#" style="
+                                -webkit-text-size-adjust: none;
+                                -ms-text-size-adjust: none;
+                                mso-line-height-rule: exactly;
+                                text-decoration: underline;
+                                color: #5c68e2;
+                                font-size: 14px;
+                              ">
+                            <img title="Dubai food shoot" src="https://mccollinsmediaweb.github.io/dfsemailers/emailer2/Images/gif1.gif"
                               alt="Dubai food shoot" width="650" style="
                                   display: block;
                                   border: 0;
