--- a/emailer3/index.html
+++ b/emailer3/index.html
@@ -151,6 +151,41 @@
                                 color: #5c68e2;
                                 font-size: 14px;
                               ">
+                            <img title="Dubai food shoot" src="https://mccollinsmediaweb.github.io/dfsemailers/emailer3/Images/bg.jpg"
+                              alt="Dubai food shoot" width="650" style="
+                                  display: block;
+                                  border: 0;
+                                  outline: none;
+                                  text-decoration: none;
+                                  float: left;
+                                  line-height: 0;
+                                  font-size: 0;
+                                  border: 0;
+                                " />
+                          </a>
+                        </td>
+                      </tr>
+                      <tr style="
+                            border-collapse: collapse;
+                            line-height: 0;
+                            font-size: 0;
+                            border: 0;
+                          ">
+                        <td style="
+                              padding: 0;
+                              margin: 0;
+                              line-height: 0;
+                              font-size: 0;
+                              border: 0;
+                            " border="0" valign="top" bgcolor="#ffffff">
+                          <a title="Dubai food shoot" href="#" style="
+                                -webkit-text-size-adjust: none;
+                                -ms-text-size-adjust: none;
+                                mso-line-height-rule: exactly;
+                                text-decoration: underline;
+                                color: #5c68e2;
+                                font-size: 14px;
+                              ">
                             <img title="Dubai food shoot" src="https://mccollinsmediaweb.github.io/dfsemailers/emailer3/Images/1.jpg"
                               alt="Dubai food shoot" width="650" style="
                                   display: block;
